# lighthouse

./: .env.local.example  .env.production  .gitignore  Build-Installer.cmd  CLAUDE.md  Gemfile  Lighthouse.cmd  Lighthouse.command  README.md  SECURITY.md  install.sh  next.config.mjs  package-lock.json  package.json
.github/workflows/: ablation.yml  asset-digests.yml  check.yml  desktop-release.yml  mirror-hf-assets.yml  mirror-tts.yml  mobile-bootstrap.yml  mobile-spike.yml  native.yml  publish-release.yml  release-smoke.yml  release.yml  supply-chain.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/explorer/: page.tsx
app/widget/: page.tsx
docs/: ARCHITECTURE.md  CONVENTIONS.md  analytics-beam.md  analytics-genie.md  auto-updater-design.md  beam-caps-audit.md  crate-split.md  data-flows.md  dependency-triage-0.12.3.md  design-language.md  desktop.md  edr-whitelisting.md  ios-private-model.md  launch-copy.md  local-inference.md  maintainer-provisioning.md  managed-deployment.md  mobile-signing.md  multi-doc-synthesis.md  registration.md  rewrite-scope.md  roadmap-personas-2026-07.md  security-fixes.md  server-decommission.md  signing.md  ts-twin.md  widget-scope.md  xlsx-dependency-eval.md
docs/agents/: chat.md  explorer.md  onboarding.md  shell.md
docs/blueprints/: converse.md  read-aloud.md
docs/experiments/: onboarding-and-defaults-ab-tests.md
docs/licenses/: qwen2.5-1.5b-instruct.md
e2e/: visual-first.spec.ts
electron/: error.html  main.js  preload.js  splash.html  updater.js
fastlane/: Appfile  Fastfile  Matchfile
marketing/campaigns/: linkedin-data-analysts-schedule.md
marketing/flyers/: README.md  fonts.css  lighthouse-flyer-data-analyst.html  lighthouse-flyer-financial-analyst.html  render.mjs
native/: Cargo.toml  README.md  audit.toml
native/crates/lighthouse-cli/: Cargo.toml
native/crates/lighthouse-cli/src/: main.rs
native/crates/lighthouse-core/: Cargo.toml
native/crates/lighthouse-core/examples/: analytics_eval.rs  chart_eval.rs  retrieval_eval.rs
native/crates/lighthouse-core/src/: analytics.rs  answer_cache.rs  ask.rs  audit.rs  beam.rs  boards.rs  briefings.rs  budget.rs  catalog.rs  config.rs  contracts.rs  egress.rs  embed.rs  experiment.rs  extract.rs  index.rs  insights.rs  inspect.rs  investigations.rs  ledger.rs  lib.rs  license.rs  llm.rs  local_model.rs  meta.rs  mobile_tls.rs  numguard.rs  ocr.rs  pdf_tables.rs  pins.rs  policy.rs  profile.rs  provider_auth.rs  quotes.rs  recipes.rs  reports.rs  secrets.rs  semantic.rs  settings.rs  sqlfmt.rs  (+9 more)
native/crates/lighthouse-core/src/sources/: microsoft.rs  mod.rs  sharepoint.rs
native/crates/lighthouse-core/tests/: analytics_direct_test.rs  answer_cache_test.rs  artifacts_test.rs  ask_test.rs  boards_test.rs  catalog_test.rs  curation_rules_test.rs  default_inclusion_test.rs  embed_test.rs  extract_test.rs  index_test.rs  insights_test.rs  inspect_test.rs  investigations_test.rs  ledger_test.rs  license_test.rs  local_model_resume_test.rs  local_model_test.rs  local_only_test.rs  meta_test.rs  pins_test.rs  profile_test.rs  provenance_test.rs  provider_auth_test.rs  recipes_e2e_test.rs  recipes_test.rs  reports_test.rs  retrieval_test.rs  semantic_test.rs  settings_test.rs  sqlfmt_test.rs  state_guard_test.rs  trust_invariant_test.rs  usage_test.rs  vault_test.rs  views_test.rs
native/crates/lighthouse-core/tests/common/: mod.rs
native/crates/lighthouse-core/vault/.rag-vault/cache/: columns.json
native/crates/lighthouse-desktop/: Cargo.toml  build.rs  entitlements.plist  installer-hooks.nsh  tauri.conf.json
native/crates/lighthouse-desktop/capabilities/: default.json  desktop.json  mobile.json  widget.json
native/crates/lighthouse-desktop/icons/: icon.icns
native/crates/lighthouse-desktop/placeholder/: index.html
native/crates/lighthouse-desktop/src/: boot_guard.rs  commands.rs  lib.rs  main.rs  supervise.rs  whisper.rs
native/crates/lighthouse-desktop/src/desktop/: mod.rs  supervise.rs  tray.rs  whisper.rs  widget.rs
native/crates/lighthouse-desktop/tests/: bundle_config.rs  identity_pin.rs
native/crates/lighthouse-mcp/: Cargo.toml
native/crates/lighthouse-mcp/src/: main.rs  protocol.rs  tools.rs
native/crates/lighthouse-server/: Cargo.toml
native/crates/lighthouse-server/src/: auth.rs  lib.rs  main.rs  routes.rs
native/crates/lighthouse-server/tests/: api_test.rs  policy_test.rs
native/crates/lighthouse-shell/: Cargo.toml  build.rs
native/crates/lighthouse-shell/src/: commands.rs  lib.rs  state_home.rs
openspec/: config.yaml
resources/llm/: .gitkeep
resources/ocr/: .gitkeep
scripts/: brand-screens.mjs  build-ui-static.mjs  check-contrast.mjs  check-stamps.mjs  e2e-sidebar-flyout.mjs  egress-proof.mjs  fetch-local-model.mjs  gen-glyphs.mjs  gen-icons.mjs  gen-installer-art.mjs  openspec-validate.mjs  setup-gui.ps1
src/contracts/: index.ts  onDeviceAvailability.ts  services.ts  types.ts
src/lib/: answerHtml.ts  answerTable.ts  appearanceSpec.ts  askTypeahead.ts  billingNotes.ts  chartFromTable.ts  chartSpec.ts  citePreview.ts  collapseSections.ts  comingSoon.ts  evidencePack.ts  (+20 more)
test/: _assign-loader-hook.mjs  _mock-supabase.mjs  _ts-extensionless-hook.mjs  answerCache.test.mjs  answerHtml.test.mjs  answerTable.test.mjs  appearanceSettings.test.mjs  appearanceSpec.test.mjs  appleControls.test.mjs  appleGlass.test.mjs  appleIcons.test.mjs  appleTokens.test.mjs  artifacts.test.mjs  askTypeahead.test.mjs  assumptionLedger.test.mjs  audit.test.mjs  billingNotes.test.mjs  boards.test.mjs  boardsUi.test.mjs  briefings.test.mjs  budget.test.mjs  budgetCallRegistry.test.mjs  budgetFloor.test.mjs  capabilityNavUi.test.mjs  chartFromTable.test.mjs  chartIt.test.mjs  chartSpec.test.mjs  chatScroll.test.mjs  chatStore.investigations.test.mjs  chatStore.prune.test.mjs  checkStamps.test.mjs  chunker.test.mjs  citePreview.test.mjs  cloudSnapshot.test.mjs  collapseSections.test.mjs  compactHeader.test.mjs  compactPrompt.test.mjs  compactShell.test.mjs  compactTabBar.test.mjs  compactTransition.test.mjs  (+89 more)
vault/: welcome.md
(+343 files in other folders)
