[workspace]
resolver = "2"
members = ["crates/lighthouse-core", "crates/lighthouse-server", "crates/lighthouse-desktop"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "signal"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "stream", "multipart"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4"] }
scrypt = { version = "0.11", default-features = false }
base64 = "0.22"
rayon = "1"
notify = "7"
calamine = "0.26"
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
axum = { version = "0.7", features = ["multipart"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
