[workspace]
resolver = "2"
members = ["crates/lighthouse-core", "crates/lighthouse-server", "crates/lighthouse-desktop", "crates/lighthouse-cli", "crates/lighthouse-mcp"]

[workspace.package]
version = "0.13.4"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "signal"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
# "blocking" serves the embedding client (crate::embed): retrieval runs inside
# spawn_blocking and the vector warm pass on a plain thread, so a sync client
# (with its own internal runtime thread) fits better than juggling handles.
#
# NOTE (iOS field patch 1 §4): deliberately NO TLS root-store feature here —
# the member crates select it per compile target (see the [target...] reqwest
# sections in lighthouse-core/lighthouse-desktop): native OS roots on desktop
# (unchanged), compiled-in webpki roots on iOS/Android, where rustls-native-
# certs has no keychain backend and yields an EMPTY root store (every provider
# handshake fails "invalid peer certificate: UnknownIssuer" — the first-round
# TestFlight report). Keep this line feature-free or desktop features would
# additively leak into the mobile build.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "blocking"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4"] }
scrypt = { version = "0.11", default-features = false }
base64 = "0.22"
rayon = "1"
notify = "7"
calamine = { version = "0.26", features = ["dates"] }
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
# add-ocr-perception: pure-Rust OCR (no native libs — bundles like the GGUFs).
ocrs = "0.12"
rten = "0.24"
# Decoders for the OCR-able image formats only; lopdf (already pdf-extract's
# parser) reads embedded page images out of scanned PDFs.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff"] }
lopdf = "0.34"
axum = { version = "0.7", features = ["multipart"] }
datafusion = "54"
tempfile = "3"

# DataFusion makes debug-info dev builds enormous (~1 GB per linked test
# binary, >20 GB per target dir) — too big for CI runner disks and most dev
# containers. Symbol names survive in backtraces; flip locally if you need
# line-level debugging.
[profile.dev]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
