[package]
name = "lighthouse-core"
description = "Lighthouse engine: vault, retrieval, extraction, chat, licensing client."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
scrypt = { workspace = true }
base64 = { workspace = true }
calamine = { workspace = true }
pdf-extract = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
rayon = { workspace = true }
notify = { workspace = true }
datafusion = { workspace = true }
ocrs = { workspace = true }
rten = { workspace = true }
image = { workspace = true }
lopdf = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
