[package]
name = "lighthouse-core"
description = "Lighthouse engine: vault, retrieval, extraction, chat, licensing client."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
scrypt = { workspace = true }
base64 = { workspace = true }
calamine = { workspace = true }
pdf-extract = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
rayon = { workspace = true }
notify = { workspace = true }
datafusion = { workspace = true }
ocrs = { workspace = true }
rten = { workspace = true }
image = { workspace = true }
lopdf = { workspace = true }
minisign-verify = "0.2"
hmac = "0.12"
# Optional OS-keychain backend for the secrets sealing key (P1.4). Off by
# default — enabling stores the per-install sealing secret in the platform
# keychain instead of the 0600 file beside the ciphertext. Gated behind a
# feature because it can't be verified from the dev container (no Secret
# Service); the maintainer turns it on after testing on real macOS / Windows /
# Linux-desktop. `crypto-rust` keeps the Linux Secret Service backend
# pure-Rust (no OpenSSL system dep).
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
], optional = true }

[features]
# Store the per-install sealing secret in the OS keychain rather than the
# secret.key file. The file path stays as a fail-closed fallback when no
# keychain is available. See src/secrets.rs.
keychain = ["dep:keyring"]

[dev-dependencies]
minisign = "0.7"
tempfile = { workspace = true }
