[package]
name = "lighthouse-desktop"
description = "Lighthouse desktop shell (Tauri 2): window, tray, dialogs, process supervision, IPC transport — replaces the Electron shell."
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lighthouse-core = { path = "../lighthouse-core" }
lighthouse-server = { path = "../lighthouse-server" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"

# W3 Whisper mode: the WH_KEYBOARD_LL tap-chord hook (whisper.rs).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# W3 Whisper mode, macOS leg: NSEvent global monitor + the Accessibility
# trust check (whisper.rs). Versions match what tauri/tao already lock.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "block2"] }
block2 = "0.6"
core-foundation = "0.10"

# W3 Whisper mode, X11 leg: passive XInput2 raw key events (whisper.rs).
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13", features = ["xinput"] }

[[bin]]
name = "lighthouse-desktop"
path = "src/main.rs"
