[package]
name = "lighthouse-desktop"
description = "Lighthouse desktop shell (Tauri 2): window, tray, dialogs, process supervision, IPC transport — replaces the Electron shell."
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lighthouse-core = { path = "../lighthouse-core" }
lighthouse-server = { path = "../lighthouse-server" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
# reqwest is declared per-target below (§4): the TLS root store differs by
# platform — see the seam comment in lighthouse-core/Cargo.toml.
rand = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

# Desktop-only plugins (add-mobile-apps §2): none of these exist on iOS or
# Android — there is no second instance to dedupe, no login autostart, no
# multi-window state to remember, no global hotkey backend. They pair with the
# `cfg(desktop)` shell code in src/desktop/ and are excluded from the mobile
# dependency graph entirely.
# reqwest rides the same split (§4): OS trust roots on desktop, compiled-in
# webpki roots on mobile — the full seam rationale lives in
# lighthouse-core/Cargo.toml, which declares the identical pair.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
# §31 touch feel: selection ticks + light impacts (src/shell/haptics.ts calls
# the plugin commands directly over invoke — the npm wrapper is just that shim).
# Mobile-only: desktop has no taptic hardware and never registers the plugin.
tauri-plugin-haptics = "2"

# add-mobile-local-inference: dlsym the Swift @_cdecl private-model shim at
# RUNTIME (commands.rs) rather than a link-time extern — the Swift lives in the
# iOS app target that links after this cdylib, so a link-time reference would
# leave the cdylib with an undefined symbol. iOS-only.
[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"

# W3 Whisper mode: the WH_KEYBOARD_LL tap-chord hook (whisper.rs).
# Win32_System_JobObjects (+ Win32_Security, which gates CreateJobObjectW's
# SECURITY_ATTRIBUTES param): the kill-on-close job that ties supervised
# children (llama-server) to the shell's lifetime (assign_to_death_job).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# W3 Whisper mode, macOS leg: NSEvent global monitor + the Accessibility
# trust check (whisper.rs). Versions match what tauri/tao already lock.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# NSWorkspace: the §31 Reduce Transparency read (commands::reduce_transparency).
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSWorkspace", "block2"] }
block2 = "0.6"
core-foundation = "0.10"

# W3 Whisper mode, X11 leg: passive XInput2 raw key events (whisper.rs).
# Android/iOS are `unix` targets too but have no X11 — exclude them (whisper.rs
# itself is cfg(desktop), but target deps resolve per-target regardless).
[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android", target_os = "ios"))))'.dependencies]
x11rb = { version = "0.13", features = ["xinput"] }

# add-mobile-apps §2: lib + bin. The shared shell lives in the library so the
# desktop bin and the mobile entry point share one code path; staticlib/cdylib
# are the iOS/Android link targets, rlib is what the desktop bin links.
[lib]
name = "lighthouse_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "lighthouse-desktop"
path = "src/main.rs"
